--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Quantum Resource Estimation (QRE 2024) for Neutral Atom Computers</title>
+  <title>Quantum Resource Estimation (QRE 2025) for QEC Decoders</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -92,7 +92,7 @@
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <p class="mb-0 pb-0">The 6<sup>th</sup> International Workshop on</p>
-      <h1 class="mb-4 pb-0"><span>Quantum Resource Estimation (QRE2024)</span></br><span>for Neutral Atom Computers</span></h1>
+      <h1 class="mb-4 pb-0"><span>Quantum Resource Estimation (QRE2025)</span></br><span>for Neutral Atom Computers</span></h1>
       <p class="mb-0 pb-0">11 September - Helsinki, Finland</p>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" -->
         <!-- data-autoplay="true"></a> -->
@@ -169,7 +169,7 @@
 
             <p>
               QRE will be preceded by the <a href="https://instituteq.fi/fqd/" target=_blank>Finnish Quantum Days</a>
-              and afterwards by the <a href="https://unitary.fund/community/unitaryCON/" target=_blank>unitaryCon2024</a> which is organized together with the unitary fund.
+              and afterwards by the <a href="https://unitary.fund/community/unitaryCON/" target=_blank>unitaryCon2025</a> which is organized together with the unitary fund.
             </p>
           </div>
 
@@ -229,8 +229,8 @@
       <div class="container">
         <div class="section-header">
           <h2>Call for Papers</h2>
-          <p><a href="cfp+qre+2024.txt" target=_blank>Download TXT</a></p>
-          <p><a href="https://easychair.org/conferences/?conf=qre2024" target=_blank>Submission Site</a></p>
+          <p><a href="cfp+qre+2025.txt" target=_blank>Download TXT</a></p>
+          <p><a href="https://easychair.org/conferences/?conf=qre2025" target=_blank>Submission Site</a></p>
         </div>
         <div class="row">
             <p>
@@ -271,7 +271,7 @@
               </ul>
             </p>
             <p>
-              Initial <a target="_blank" href="https://easychair.org/conferences/?conf=qre2024">submission for QRE2024</a> will consist of an extended abstract, limited to 2+epsilon-pages (including 
+              Initial <a target="_blank" href="https://easychair.org/conferences/?conf=qre2025">submission for QRE2025</a> will consist of an extended abstract, limited to 2+epsilon-pages (including 
               figures and references, please don't go nuts with the epsilon!). Contributions must be written in English and report on original, unpublished work, not submitted for publication elsewhere.
 			  </p>
 			  <!-- <p>
@@ -288,16 +288,16 @@
       <div class="container">
         <div class="section-header">
           <h2>Important Dates</h2>
-          <p><a href="https://easychair.org/conferences/?conf=qre2024" target=_blank>Submission Site</a></p>
+          <p><a href="https://easychair.org/conferences/?conf=qre2025" target=_blank>Submission Site</a></p>
         </div>
         <div class="row">
-            Extended Abstract Submission: <b>14th July 2024</b>
+            Extended Abstract Submission: <b>14th July 2025</b>
         </div>
         <div class="row">
-            Notification Extended Abstract: <b>1st August 2024</b>
+            Notification Extended Abstract: <b>1st August 2025</b>
         </div>
         <div class="row">
-            Workshop Date: <b> 11 September 2024</b>
+            Workshop Date: <b> 11 September 2025</b>
         </div>
       </div>
     </section>
@@ -311,7 +311,7 @@
           <h2>Venue</h2>
         </div>
         <div class="row">
-          <p>QRE2024 will be held in Helsinki, the capital of Finland. The venue is Aalto University's 
+          <p>QRE2025 will be held in Helsinki, the capital of Finland. The venue is Aalto University's 
             <a href=="https://www.aalto.fi/en/locations/dipoli" target=_blank>Dipoli Building</a>.</p>
         </div>
         <div class="row">
@@ -352,7 +352,7 @@
 						at the Central Railway Station (Rautatieasema) will be closed.
 						These stations are within walkable distances, and you can also take trams 9 or 9B.
 						For more information on this and other metro disruptions, click
-						<a href="https://www.hsl.fi/en/hsl/major-service-changes-in-2024/changes-to-metro-services" target=_blank>here</a>.</p>	
+						<a href="https://www.hsl.fi/en/hsl/major-service-changes-in-2025/changes-to-metro-services" target=_blank>here</a>.</p>	
 					<p>If this is your first time in Helsinki, it is worth taking a look at some
 						<a href="https://www.visitfinland.com/en/places-to-go/helsinki-region/helsinki-city/" target=_blank>general and tourist information.</a></p>
         </div>
@@ -862,7 +862,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>QRE2024</strong>. All Rights Reserved
+        &copy; Copyright <strong>QRE2025</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
