--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <p class="mb-0 pb-0">The 6<sup>th</sup> International Workshop on</p>
-      <h1 class="mb-4 pb-0"><span>Quantum Resource Estimation (QRE2025)</span></br><span>for Neutral Atom Computers</span></h1>
+      <h1 class="mb-4 pb-0"><span>Quantum Resource Estimation (QRE2025)</span></br><span>for QEC Decoders</span></h1>
       <p class="mb-0 pb-0">11 September - Helsinki, Finland</p>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" -->
         <!-- data-autoplay="true"></a> -->
