--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <p class="mb-0 pb-0">The 6<sup>th</sup> International Workshop on</p>
+      <p class="mb-0 pb-0">The 7<sup>th</sup> International Workshop on</p>
       <h1 class="mb-4 pb-0"><span>Quantum Resource Estimation (QRE2025)</span></br><span>for QEC Decoders</span></h1>
-      <p class="mb-0 pb-0">11 September - Helsinki, Finland</p>
+      <p class="mb-0 pb-0">5 September - Helsinki, Finland</p>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" -->
         <!-- data-autoplay="true"></a> -->
       
@@ -143,8 +143,10 @@
           <div class="col-lg-6">
             <h2>About QRE</h2>
             <p>
-              This is the sixth international workshop on the emerging field of Quantum Resource Estimation (QRE), benchmarking and performance analytics.
-              The previous editions were <a target="_blank" href="http://qre2023.quantumresource.org">QRE2023</a>,
+              This is the seventh international workshop on the emerging field of Quantum Resource Estimation (QRE), benchmarking and performance analytics.
+              The previous editions were 
+	      <a target="_blank" href="http://qre2024.quantumresource.org">QRE2024</a>
+	      <a target="_blank" href="http://qre2023.quantumresource.org">QRE2023</a>,
               <a target="_blank" href="http://qre2022.quantumresource.org">QRE2022</a>, 
               <a target="_blank" href="http://qre2021.quantumresource.org">QRE2021</a>, 
               <a target="_blank" href="http://qre2020.quantumresource.org">QRE2020</a> and
