--- a/index.html
+++ b/index.html
@@ -356,26 +356,28 @@
           <h2>Invited Speakers</h2>
         </div>
 
-        <!-- <div class="row">
+        <div class="row">
 			
 			    <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/gavin_brennen.jpg" alt="Speaker" class="img-fluid">
+              <img src="img/speakers/francisco_garcia.png" alt="Speaker" class="img-fluid">
               <div class="details">
-                <h3>Gavin Brennen (Macquarie University)</h3>
+                <h3>Francisco Garcia-Herrero (Complutense Madrid)</h3>
                 <p>&nbsp;</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/tanuj_khattar.png" alt="Speaker" class="img-fluid">
+              <img src="img/speakers/joschka_roffe.jpg" alt="Speaker" class="img-fluid">
               <div class="details">
-                <h3>Tanuj Khattar (Google QuantumAI)</h3>
+                <h3>Joschka Roffe (University of Edinburgh)</h3>
                 <p>&nbsp;</p>
               </div>
             </div>
           </div>
+        </div>
+          <!--
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
               <img src="img/speakers/jeff_hammond.jpg" alt="Speaker" class="img-fluid">
