--- a/index.html
+++ b/index.html
@@ -375,6 +375,14 @@
                 <p>&nbsp;</p>
               </div>
             </div>
+          </div><div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/dan_browne.jpg" alt="Speaker" class="img-fluid">
+              <div class="details">
+                <h3>Dan Browne (University College London)</h3>
+                <p>&nbsp;</p>
+              </div>
+            </div>
           </div>
         </div>
           <!--
