--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
       <!-- <a href="#importantdates" class="about-btn scrollto">Important Dates</a> -->
 	  
 	  
-	  <p class="mb-0 pb-0">sponsored by <a target="_blank" href="https://www.instituteq.fi"> InstituteQ</a>, 
-      the <a target=_blank href="https://www.aalto.fi/en/aalto-science-institute-asci">Aalto Science Institute</a> 
-		and <a target=_blank href="https://www.d-fine.de/en">d-fine</a></p>
+	  <p class="mb-0 pb-0">sponsored by <a target="_blank" href="https://www.instituteq.fi"> InstituteQ</a> and <a target=_blank href="https://www.d-fine.de/en">d-fine</a></p>
 	  <p class="mb-0 pb-0" style="background-color:white; text-align:center">
 			<a href="https://www.aalto.fi/en" target="_blank">
 				<img width=100px src="img/sponsors/aalto.png" class="img-fluid" alt="">
@@ -675,23 +673,23 @@
         </div>
         <div class="row no-gutters sponsors-wrap clearfix">
           <div class="col-sm-2 abc">
-			<a href="https://www.aalto.fi/en" target="_blank">
-				<img src="img/sponsors/aalto.png" class="img-fluid" alt="">
-			</a>
+            <a href="https://www.aalto.fi/en" target="_blank">
+              <img src="img/sponsors/aalto.png" class="img-fluid" alt="">
+            </a>
           </div> 
-		  <div class="col-sm-2 abc">
-			<a href="https://www.aalto.fi/en" target="_blank">
-				<img src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
-			</a>
+		      <div class="col-sm-2 abc">
+            <a href="https://www.aalto.fi/en" target="_blank">
+              <img src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
+            </a>
           </div>
           <div class="col-sm-2 abc">
             <a href="http://www.h-bar.com.au" target="_blank">
-				<img src="img/sponsors/hbarlogo.jpg" class="img-fluid" alt="">
-			</a>
+				      <img src="img/sponsors/hbarlogo.jpg" class="img-fluid" alt="">
+			      </a>
           </div>
           <div class="col-sm-2 abc">
             <a href="http://www.h-bar.com.au" target="_blank">
-                <img src="img/sponsors/uts.jpg" class="img-fluid" alt="">
+              <img src="img/sponsors/uts.jpg" class="img-fluid" alt="">
             </a>
           </div>
         </div>
