--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
 	  
 	  <p class="mb-0 pb-0">sponsored by <a target="_blank" href="https://www.instituteq.fi"> InstituteQ</a> and <a target=_blank href="https://www.d-fine.de/en">d-fine</a></p>
 	  <p class="mb-0 pb-0" style="background-color:white; text-align:center">
-			<a href="https://www.aalto.fi/en" target="_blank">
-				<img width=100px src="img/sponsors/aalto.png" class="img-fluid" alt="">
-			</a>
       <a href="https://www.instituteq.fi" target="_blank">
-				<img width=100px src="img/sponsors/instituteq.png" class="img-fluid" alt="">
+				<img width=120px src="img/sponsors/instituteq.png" class="img-fluid" alt="">
 			</a>
 			<a href="https://www.d-fine.de/en" target="_blank">
-				<img width=100px src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
+				<img width=120px src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
 			</a>
-            <a href="http://www.h-bar.com.au" target="_blank">
-				<img width=100px src="img/sponsors/hbarlogo.jpg" class="img-fluid" alt="">
+      <a href="https://www.aalto.fi/en" target="_blank">
+				<img width=120px src="img/sponsors/aalto.png" class="img-fluid" alt="">
+			</a>
+      <a href="http://www.h-bar.com.au" target="_blank">
+				<img width=120px src="img/sponsors/hbarlogo.jpg" class="img-fluid" alt="">
 			</a>
 	  </p>
       
@@ -676,6 +676,11 @@
             <a href="https://www.aalto.fi/en" target="_blank">
               <img src="img/sponsors/aalto.png" class="img-fluid" alt="">
             </a>
+          </div>
+          <div class="col-sm-2 abc">
+            <a href="https://www.aalto.fi/en" target="_blank">
+              <img src="img/sponsors/instituteq.png" class="img-fluid" alt="">
+            </a>
           </div> 
 		      <div class="col-sm-2 abc">
             <a href="https://www.aalto.fi/en" target="_blank">
@@ -686,11 +691,6 @@
             <a href="http://www.h-bar.com.au" target="_blank">
 				      <img src="img/sponsors/hbarlogo.jpg" class="img-fluid" alt="">
 			      </a>
-          </div>
-          <div class="col-sm-2 abc">
-            <a href="http://www.h-bar.com.au" target="_blank">
-              <img src="img/sponsors/uts.jpg" class="img-fluid" alt="">
-            </a>
           </div>
         </div>
       </div>
