--- a/index.html
+++ b/index.html
@@ -382,6 +382,33 @@
               </div>
             </div>
           </div>
+          </div><div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
+              <div class="details">
+                <h3>Edwin Tham (IonQ)</h3>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+          </div>
+          </div><div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
+              <div class="details">
+                <h3>Laleh Beni (Google)</h3>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+          </div>
+          </div><div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
+              <div class="details">
+                <h3>Madelyn Cain (Harvard University)</h3>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+          </div>
         </div>
           <!--
           <div class="col-lg-4 col-md-6">
