--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
               </div>
             </div>
           </div>
-          </div><div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="speaker">
               <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
               <div class="details">
@@ -400,7 +400,7 @@
               </div>
             </div>
           </div>
-          </div><div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="speaker">
               <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
               <div class="details">
