--- a/index.html
+++ b/index.html
@@ -373,7 +373,8 @@
                 <p>&nbsp;</p>
               </div>
             </div>
-          </div><div class="col-lg-4 col-md-6">
+          </div>
+          <div class="col-lg-4 col-md-6">
             <div class="speaker">
               <img src="img/speakers/dan_browne.jpg" alt="Speaker" class="img-fluid">
               <div class="details">
@@ -382,7 +383,7 @@
               </div>
             </div>
           </div>
-          </div><div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="speaker">
               <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
               <div class="details">
