--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
+              <img src="img/speakers/edwin_tham.jpg" alt="Speaker" class="img-fluid">
               <div class="details">
                 <h3>Edwin Tham (IonQ)</h3>
                 <p>&nbsp;</p>
@@ -394,7 +394,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
+              <img src="img/speakers/laleh_beni.png" alt="Speaker" class="img-fluid">
               <div class="details">
                 <h3>Laleh Beni (Google)</h3>
                 <p>&nbsp;</p>
@@ -406,6 +406,15 @@
               <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
               <div class="details">
                 <h3>Madelyn Cain (Harvard University)</h3>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/joan_camps.jpg" alt="Speaker" class="img-fluid">
+              <div class="details">
+                <h3>Joan Camps (Riverlane)</h3>
                 <p>&nbsp;</p>
               </div>
             </div>
