--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/placeholder.jpg" alt="Speaker" class="img-fluid">
+              <img src="img/speakers/madelyn_cain.jpeg" alt="Speaker" class="img-fluid">
               <div class="details">
                 <h3>Madelyn Cain (Harvard University)</h3>
                 <p>&nbsp;</p>
