--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <!-- <a href="#importantdates" class="about-btn scrollto">Important Dates</a> -->
 	  
 	  
-	  <p class="mb-0 pb-0">sponsored by <a target="_blank" href="https://www.instituteq.fi"> InstituteQ</a> and <a target=_blank href="https://www.d-fine.de/en">d-fine</a></p>
+	  <p class="mb-0 pb-0">sponsored by</p>
 	  <p class="mb-0 pb-0" style="background-color:white; text-align:center">
       <a href="https://www.instituteq.fi" target="_blank">
 				<img width=120px src="img/sponsors/instituteq.png" class="img-fluid" alt="">
