--- a/index.html
+++ b/index.html
@@ -122,8 +122,11 @@
       <a href="https://www.quantinuum.com/" target="_blank">
 				<img width=120px src="img/sponsors/quantinuum.png" class="img-fluid" alt="">
 			</a>
-      <a href="https://alice-bob.com//" target="_blank">
+      <a href="https://alice-bob.com/" target="_blank">
 				<img width=120px src="img/sponsors/aliceandbob.png" class="img-fluid" alt="">
+			</a>
+      <a href="https://unitary.foundation/" target="_blank">
+				<img width=120px src="img/sponsors/unitaryfoundation.png" class="img-fluid" alt="">
 			</a>
       <a href="https://www.aalto.fi/en" target="_blank">
 				<img width=120px src="img/sponsors/aalto.png" class="img-fluid" alt="">
@@ -717,11 +720,6 @@
         <div class="row no-gutters sponsors-wrap clearfix">
           <div class="col-sm-2 abc">
             <a href="https://www.aalto.fi/en" target="_blank">
-              <img src="img/sponsors/aalto.png" class="img-fluid" alt="">
-            </a>
-          </div>
-          <div class="col-sm-2 abc">
-            <a href="https://www.aalto.fi/en" target="_blank">
               <img src="img/sponsors/instituteq.png" class="img-fluid" alt="">
             </a>
           </div> 
@@ -738,6 +736,11 @@
           <div class="col-sm-2 abc">
             <a href="https://alice-bob.com//" target="_blank">
               <img src="img/sponsors/aliceandbob.png" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-sm-2 abc">
+            <a href="https://unitary.foundation/" target="_blank">
+              <img src="img/sponsors/unitaryfoundation.png" class="img-fluid" alt="">
             </a>
           </div>
           <div class="col-sm-2 abc">
