--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
       <a href="https://www.instituteq.fi" target="_blank">
 				<img width=120px src="img/sponsors/instituteq.png" class="img-fluid" alt="">
 			</a>
+      <a href="https://www.d-fine.de/en" target="_blank">
+				<img width=120px src="img/sponsors/rigetti.png" class="img-fluid" alt="">
+			</a>
 			<a href="https://www.d-fine.de/en" target="_blank">
 				<img width=120px src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
 			</a>
@@ -723,6 +726,11 @@
               <img src="img/sponsors/instituteq.png" class="img-fluid" alt="">
             </a>
           </div> 
+          <div class="col-sm-2 abc">
+            <a href="https://www.d-fine.de/en" target="_blank">
+              <img width=120px src="img/sponsors/rigetti.png" class="img-fluid" alt="">
+            </a>
+          </div>
 		      <div class="col-sm-2 abc">
             <a href="https://www.aalto.fi/en" target="_blank">
               <img src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
