--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
               <div class="row schedule-item">
                   <div class="col-md-3"><time>10:00</time></div>
                   <div class="col-md-9">
-                      <h4>...</h4>
+                      <h4>Scalable decoding protocols for fast transversal logic in the surface code</h4>
                       <p style="text-decoration:underline">Joan Camps (Riverlane)</p>
                       <p></p>
                   </div>
