--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
               <div class="row schedule-item">
                 <div class="col-md-3"><time>09:15</time></div>
                 <div class="col-md-9">
-                    <h4>...</h4>
+                    <h4>Localised Statistics Decoding</h4>
                     <p style="text-decoration:underline">Joschka Roffe (University of Edinburgh)</p>
                     <p></p>
                 </div>
@@ -535,7 +535,7 @@
                     <p></p>
                 </div>
               </div>
-              
+
               <div class="row schedule-item">
                 <div class="col-md-3"><time>14:30</time></div>
                 <div class="col-md-9">
