--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
               <div class="row schedule-item">
                 <div class="col-md-3"><time>15:45</time></div>
                 <div class="col-md-9">
-                    <h4>...</h4>
+                    <h4>Low-Latency and Low-Overhead Hardware Resources for Accurate Quantum LDPC decoders</h4>
                     <p style="text-decoration:underline">Francisco Garcia-Herrero (Complutense Madrid)</p>
                     <p></p>
                 </div>
