--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
               <div class="row schedule-item">
                 <div class="col-md-3"><time>12:00</time></div>
                 <div class="col-md-9">
-                    <h4>...</h4>
+                    <h4> The AutDEC decoder - Improving Belief Propagation by ensembling and code symmetry</h4>
                     <p style="text-decoration:underline">Dan Browne (University College London)</p>
                     <p></p>
                 </div>
