--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
               <div class="row schedule-item">
                 <div class="col-md-3"><time>14:30</time></div>
                 <div class="col-md-9">
-                    <h4>...</h4>
+                    <h4>Fault-tolerance in the near- and medium-term</h4>
                     <p style="text-decoration:underline">Edwin Tham (IonQ)</p>
                     <p></p>
                 </div>
