--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
               <div class="row schedule-item">
                 <div class="col-md-3"><time>13:45</time></div>
                 <div class="col-md-9">
-                    <h4>...</h4>
+                    <h4>Tesseract: A Search-Based Decoder for Quantum Error Correction</h4>
                     <p style="text-decoration:underline">Laleh Beni (Google)</p>
                     <p></p>
                 </div>
