--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 			<a href="https://www.d-fine.de/en" target="_blank">
 				<img width=120px src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
 			</a>
+      <a href="https://meetiqm.com/" target="_blank">
+				<img width=120px src="img/sponsors/iqmlogo.png" class="img-fluid" alt="">
+			</a>
       <a href="https://www.quantinuum.com/" target="_blank">
 				<img width=120px src="img/sponsors/quantinuum.png" class="img-fluid" alt="">
 			</a>
@@ -640,6 +643,11 @@
 		      <div class="col-sm-2 abc">
             <a href="https://www.aalto.fi/en" target="_blank">
               <img src="img/sponsors/dfinelogo.png" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-sm-2 abc">
+            <a href="https://meetiqm.com/" target="_blank">
+              <img width=120px src="img/sponsors/iqmlogo.png" class="img-fluid" alt="">
             </a>
           </div>
           <div class="col-sm-2 abc">
