--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
               <div class="row schedule-item">
                 <div class="col-md-3"><time>11:15</time></div>
                 <div class="col-md-9">
-                    <h4>...</h4>
+                    <h4>Quantum error correction and decoding with neutral atoms</h4>
                     <p style="text-decoration:underline">Madelyn Cain (Harvard University)</p>
                     <p></p>
                 </div>
