--- a/index.html
+++ b/index.html
@@ -94,13 +94,9 @@
       <p class="mb-0 pb-0">The 7<sup>th</sup> International Workshop on</p>
       <h1 class="mb-4 pb-0"><span>Quantum Resource Estimation (QRE2025)</span></br><span>for QEC Decoders</span></h1>
       <p class="mb-0 pb-0">5 September - Helsinki, Finland</p>
-  	  <p class="mb-0 pb-0" style="color:orange">
+  	  <!-- <p class="mb-0 pb-0" style="color:orange">
         <a href=https://link.webropolsurveys.com/EP/BE5F452DB33EF2C7 target="_blank">Registration is open!</a>
-      <!-- Announcements:
-        <ol style="color:yellow">
-                <li><b></b></li>
-        </ol> -->
-	    </p>
+	    </p> -->
 	  
     <a href="https://link.webropolsurveys.com/EP/BE5F452DB33EF2C7" class="about-btn scrollto" target="_blank">Registration</a>
 	  <a href="#about" class="about-btn scrollto">About The Workshop</a>
