--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <a href=https://link.webropolsurveys.com/EP/BE5F452DB33EF2C7 target="_blank">Registration is open!</a>
 	    </p> -->
 	  
-    <a href="https://link.webropolsurveys.com/EP/BE5F452DB33EF2C7" class="about-btn scrollto" target="_blank">Registration</a>
+    <!-- <a href="https://link.webropolsurveys.com/EP/BE5F452DB33EF2C7" class="about-btn scrollto" target="_blank">Registration</a> -->
 	  <a href="#about" class="about-btn scrollto">About The Workshop</a>
     <a href="#cfp" class="about-btn scrollto">Call for Papers</a>
       <!-- <a href="#importantdates" class="about-btn scrollto">Important Dates</a> -->
